--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,34 @@
 html {
   display: flex;
   height: 100%;
+  width: 100%;
   margin: auto;
   padding: 0;
   justify-content: center;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(153, 81, 81);
   color: rgb(203, 207, 209);
+}
+
+#blacknotepad {
+  width: 40vw;
+  max-width: 500px;
+  transform: rotate(-28deg);
+  -webkit-transform-origin-x: 690px;
+  opacity: 85%;
+  justify-content: center;
+  height: auto;
+  position: absolute;
+  z-index: -10;
+  border-bottom: 11px solid rgb(245, 143, 236);
+  border-left: 12px solid rgb(122, 88, 113);
+  border-radius: 30px ;
+  -webkit-box-shadow: -7px 10px 8px 0px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: -7px 10px 8px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: -7px 10px 8px 0px rgba(0, 0, 0, 0.35);
+}
+
+@media screen and (max-width: 750px)  {
+  #blacknotepad {
+    display: none;
+  }
 }
